<resources>
    <string name="app_name">Real Estate Manager</string>

    <!-- POPUP TITLE PERM -->
    <string name="popup_title_permission_files_access">This application needs permissions to access your images</string>

    <!-- ERROR TEXT -->
    <string name="http_error_message">HttpException, Error code : %1$i</string>
    <string name="timeout_error_message">Request timeout, please check your internet connection</string>
    <string name="exception_error_message">An error occurred, please check your internet connection</string>
    <string name="generic_error_message">An error occurred, please try again</string>
    <string name="gps_error_message">Can not locate you, please enable GPS</string>

    <!-- MENU -->
    <string name="menu_add_text">Add</string>
    <string name="menu_edit_text">Edit</string>
    <string name="menu_search_text">Search</string>

    <!-- ACTIVITY/FRAGMENT TITLE -->
    <string name="activity_add_title">New estate</string>
    <string name="activity_edit_title">Edit estate</string>

    <!-- ADD ACTIVITY -->
    <string name="activity_add_estate_sold_checkbox">This estate is sold?</string>
    <string name="activity_add_estate_sold_date">Sale date</string>
    <string name="activity_add_estate_type_hint">Estate type</string>
    <string name="activity_add_estate_price_hint">Estate price</string>
    <string name="activity_add_estate_surface_hint">Estate surface</string>
    <string name="activity_add_estate_room_number_hint">Rooms number</string>
    <string name="activity_add_estate_bathroom_number_hint">Bathrooms number</string>
    <string name="activity_add_estate_bedroom_number_hint">Bedrooms number</string>
    <string name="activity_add_estate_desc_hint">Description</string>
    <string name="activity_add_estate_date_hint">Estate market entry date</string>
    <string name="activity_add_estate_address_hint">Address</string>
    <string name="activity_add_estate_add_address_hint">Additional address</string>
    <string name="activity_add_estate_sector_address_hint">Sector</string>
    <string name="activity_add_estate_city_address_hint">City</string>
    <string name="activity_add_estate_zip_address_hint">Zip Code</string>
    <string name="activity_add_estate_country_address_hint">State</string>

    <string name="activity_add_estate_parks">Parks</string>
    <string name="activity_add_estate_shops">Shops</string>
    <string name="activity_add_estate_schools">Schools</string>
    <string name="activity_add_estate_highway">Highway</string>

    <string name="activity_add_estate_choose_pic">Choose picture</string>
    <string name="activity_add_estate_take_pic">Take picture</string>
    <string name="activity_add_estate_save">Save</string>

    <string name="activity_add_title_estate">Estate information</string>
    <string name="activity_add_title_address">Address information</string>
    <string name="activity_add_title_nearby">Nearby points of interest</string>
    <string name="activity_add_title_media">Media</string>

    <string name="activity_add_estate_saved">Estate successfully saved in database</string>
    <string name="activity_add_estate_save_error">You must provide title and description for each picture before saving estate</string>

    <!-- OVERLAY -->
    <string name="overlay_image_title">Title</string>
    <string name="overlay_image_desc">Description</string>
    <string name="overlay_image_details_saved">Image details saved</string>

    <string name="overlay_image_title_error">You must provide a title</string>
    <string name="overlay_image_desc_error">You must provide a description</string>

    <!-- ESTATE TYPE -->
    <string-array name="estate_type">
        <item>@string/activity_add_estate_flat</item>
        <item>@string/activity_add_estate_house</item>
        <item>@string/activity_add_estate_duplex</item>
        <item>@string/activity_add_estate_penthouse</item>
    </string-array>

    <string name="activity_add_estate_flat">FLAT</string>
    <string name="activity_add_estate_house">HOUSE</string>
    <string name="activity_add_estate_duplex">DUPLEX</string>
    <string name="activity_add_estate_penthouse">PENTHOUSE</string>

    <!-- ESTATE STATUTE -->
    <string-array name="estate_statute">
        <item>@string/activity_add_estate_available</item>
        <item>@string/activity_add_estate_sold</item>
    </string-array>

    <string name="activity_add_estate_available">AVAILABLE</string>
    <string name="activity_add_estate_sold">SOLD</string>

    <!-- ESTATE DETAIL FRAGMENT-->
    <string name="detail_fragment_media">Media</string>
    <string name="detail_fragment_desc">Description</string>
    <string name="detail_fragment_surface">Surface</string>
    <string name="detail_fragment_rooms">Number of rooms</string>
    <string name="detail_fragment_bathrooms">Bathroom</string>
    <string name="detail_fragment_bedrooms">Bedrooms</string>
    <string name="detail_fragment_vicinity">Vicinity</string>
    <string name="detail_fragment_location">Location</string>
    <string name="detail_fragment_added_on">Estate added on %1s</string>
    <string name="detail_fragment_sold_on">Estate sold on %1s</string>

    <string name="detail_fragment_no_image_available">This estate has no images yet</string>
    <string name="detail_fragment_not_specified">Not specified</string>
    <string name="detail_fragment_no_desc">This estate has no description yet</string>

    <!-- ESTATE LIST FRAGMENT-->
    <string name="list_fragment_no_type">Type not know</string>
    <string name="list_fragment_no_city">City not know</string>
    <string name="list_fragment_no_price">Price not know</string>
    
    <!-- LOAN SIMULATOR -->
    <string name="loan_amount">Loan amount</string>
    <string name="loan_term">Loan term (years)</string>
    <string name="loan_interest">Interest rate (%)</string>
    <string name="loan_insurance">Insurance rate(%)</string>
    <string name="loan_down_payment">Down payment</string>
    <string name="loan_monthly_pay">Monthly pay</string>
    <string name="loan_total_cost">Interest total cost</string>
    <string name="loan_calculate">Calculate</string>

    <string name="loan_error">This field can\'t be empty</string>
    <string name="loan_error_interest_value">Interest rate must be between 0 and 100</string>
    <string name="loan_error_down_payment">The down payment can\'t be higher or equal than loan amount</string>

    <!-- LOAN TERM VALUES -->
    <string-array name="loan_term_values">
        <item>@string/loan_term_10</item>
        <item>@string/loan_term_15</item>
        <item>@string/loan_term_20</item>
        <item>@string/loan_term_25</item>
        <item>@string/loan_term_30</item>
    </string-array>

    <string name="loan_term_10">10</string>
    <string name="loan_term_15">15</string>
    <string name="loan_term_20">20</string>
    <string name="loan_term_25">25</string>
    <string name="loan_term_30">30</string>

    <!-- BOTTOM NAVIGATION VIEW TITLE-->
    <string name="nav_view_list">List</string>
    <string name="nav_view_search">Search</string>
    <string name="nav_view_map">Map</string>
    <string name="nav_view_sim">Loan</string>

    <!-- SEARCH FRAGMENT -->
    <string name="search_statute">Estate statute</string>
    <string name="search_price_min">Price min</string>
    <string name="search_price_max">Price max</string>
    <string name="search_surface_min">Surface min</string>
    <string name="search_surface_max">Surface max</string>
    <string name="search_bedrooms_min">Bedroom min</string>
    <string name="search_bedrooms_max">Bedroom max</string>
    <string name="search_from_date">From date</string>
    <string name="search_to_date">To date</string>
    <string name="search_media_min">Photo min</string>

    <string name="search_empty_result">There is no estate matching your search</string>

    <!-- ESTATE SEARCH TYPE -->
    <string-array name="search_type_array">
        <item>@string/activity_add_estate_flat</item>
        <item>@string/activity_add_estate_house</item>
        <item>@string/activity_add_estate_duplex</item>
        <item>@string/activity_add_estate_penthouse</item>
        <item>@string/search_type_all</item>
    </string-array>

    <string name="search_type_all">ALL</string>

    <!-- ESTATE STATUTE -->
    <string-array name="search_statute_array">
        <item>@string/activity_add_estate_available</item>
        <item>@string/activity_add_estate_sold</item>
        <item>@string/search_statute_all</item>
    </string-array>

    <string name="search_statute_all">ALL</string>

    <!-- NOTIFICATIONS -->
    <string name="notification_title">Real Estate Manager</string>
    <string name="notification_message_create">Estate was successfully added into database</string>
    <string name="notification_message_update">Estate was successfully updated into database</string>

</resources>
