<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Controller.Fragments.LoanFragment"
    android:padding="@dimen/padding_to_parent"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loan_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/loan_amount"
        app:layout_constraintTop_toBottomOf="@id/simple_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="@dimen/space_between_elements"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loan_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:inputType="number"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loan_down_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loan_down_payment"
        android:paddingBottom="@dimen/space_between_elements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loan_amount_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loan_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loan_term_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/loan_term"
        android:paddingBottom="@dimen/space_between_elements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loan_down_layout"
        app:layout_constraintWidth_percent=".49"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loan_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:inputType="number"
            android:text="20"
            android:drawableEnd="@drawable/baseline_arrow_drop_down_black_24"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loan_interest_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/loan_interest"
        android:paddingBottom="@dimen/space_between_elements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loan_down_layout"
        app:layout_constraintWidth_percent=".49">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loan_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:inputType="numberDecimal"
            android:text="2" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loan_monthly_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loan_monthly_pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loan_interest_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loan_monthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loan_total_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/loan_total_cost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loan_monthly_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loan_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loan_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/loan_calculate"
        android:textColor="@color/colorWhite"
        android:background="@color/design_default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loan_total_layout" />


</android.support.constraint.ConstraintLayout>